--- a/NiziKit.Editor/Views/SceneTreeView.axaml
+++ b/NiziKit.Editor/Views/SceneTreeView.axaml
@@ -10,66 +10,61 @@
         <views:BoolToForegroundConverter x:Key="BoolToForegroundConverter"/>
     </UserControl.Resources>
 
-    <Grid RowDefinitions="*,Auto">
-        <TreeView Grid.Row="0"
-                  x:Name="SceneTree"
-                  ItemsSource="{Binding RootObjects}"
-                  Background="Transparent"
-                  SelectionMode="Single"
-                  Margin="4">
-            <TreeView.ContextMenu>
-                <ContextMenu>
-                    <MenuItem Header="New Object" Command="{Binding NewObjectCommand}"/>
-                    <MenuItem Header="New Child" Command="{Binding NewChildObjectCommand}"
-                              IsEnabled="{Binding HasSelection}"/>
-                    <Separator/>
-                    <MenuItem Header="Delete" Command="{Binding DeleteObjectCommand}"
-                              IsEnabled="{Binding HasSelection}"/>
-                </ContextMenu>
-            </TreeView.ContextMenu>
-            <TreeView.ItemTemplate>
-                <TreeDataTemplate ItemsSource="{Binding Children}" x:DataType="vm:GameObjectViewModel">
-                    <StackPanel Orientation="Horizontal" Spacing="8">
-                        <PathIcon Data="{Binding TypeIconData}"
-                                  Width="20" Height="20"
-                                  Foreground="{Binding TypeIconColor}"
-                                  VerticalAlignment="Center"
-                                  Opacity="{Binding IsActive, Converter={x:Static vm:GameObjectViewModel.ActiveToOpacityConverter}}"/>
-                        <TextBlock Text="{Binding Name}"
-                                   VerticalAlignment="Center"
-                                   Foreground="{Binding IsActive, Converter={StaticResource BoolToForegroundConverter}}"/>
-                    </StackPanel>
-                </TreeDataTemplate>
-            </TreeView.ItemTemplate>
-            <TreeView.Styles>
-                <Style Selector="TreeViewItem">
-                    <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
-                    <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}"/>
-                </Style>
-            </TreeView.Styles>
-        </TreeView>
+    <Panel>
+        <Grid RowDefinitions="*,Auto">
+            <TreeView Grid.Row="0"
+                      x:Name="SceneTree"
+                      ItemsSource="{Binding RootObjects}"
+                      SelectionMode="Single"
+                      Margin="4"
+                      PointerPressed="OnTreeViewPointerPressed">
+                <TreeView.ItemTemplate>
+                    <TreeDataTemplate ItemsSource="{Binding Children}" x:DataType="vm:GameObjectViewModel">
+                        <StackPanel Orientation="Horizontal" Spacing="8">
+                            <PathIcon Data="{Binding TypeIconData}"
+                                      Width="20" Height="20"
+                                      Foreground="{Binding TypeIconColor}"
+                                      VerticalAlignment="Center"
+                                      Opacity="{Binding IsActive, Converter={x:Static vm:GameObjectViewModel.ActiveToOpacityConverter}}"/>
+                            <TextBlock Text="{Binding Name}"
+                                       VerticalAlignment="Center"
+                                       Foreground="{Binding IsActive, Converter={StaticResource BoolToForegroundConverter}}"/>
+                        </StackPanel>
+                    </TreeDataTemplate>
+                </TreeView.ItemTemplate>
+                <TreeView.Styles>
+                    <Style Selector="TreeViewItem">
+                        <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
+                        <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}"/>
+                    </Style>
+                </TreeView.Styles>
+            </TreeView>
 
-        <Border Grid.Row="1"
-                x:Name="DeleteConfirmPanel"
-                IsVisible="False"
-                Background="#40E05555"
-                BorderBrush="#E05555"
-                BorderThickness="1"
-                CornerRadius="{DynamicResource ControlCornerRadius}"
-                Padding="12"
-                Margin="4">
-            <StackPanel Spacing="10">
-                <TextBlock x:Name="DeleteConfirmText"
-                           Text="Delete this object?"
-                           TextWrapping="Wrap"/>
-                <StackPanel Orientation="Horizontal" Spacing="8" HorizontalAlignment="Right">
-                    <Button Content="Cancel"
-                            x:Name="CancelDeleteButton"/>
-                    <Button Content="Delete"
-                            x:Name="ConfirmDeleteButton"
-                            Foreground="#E05555"/>
+            <Border Grid.Row="1"
+                    x:Name="DeleteConfirmPanel"
+                    IsVisible="False"
+                    Background="#40E05555"
+                    BorderBrush="#E05555"
+                    BorderThickness="1"
+                    CornerRadius="{DynamicResource ControlCornerRadius}"
+                    Padding="12"
+                    Margin="4">
+                <StackPanel Spacing="10">
+                    <TextBlock x:Name="DeleteConfirmText"
+                               Text="Delete this object?"
+                               TextWrapping="Wrap"/>
+                    <StackPanel Orientation="Horizontal" Spacing="8" HorizontalAlignment="Right">
+                        <Button Content="Cancel"
+                                x:Name="CancelDeleteButton"/>
+                        <Button Content="Delete"
+                                x:Name="ConfirmDeleteButton"
+                                Foreground="#E05555"/>
+                    </StackPanel>
                 </StackPanel>
-            </StackPanel>
-        </Border>
-    </Grid>
+            </Border>
+        </Grid>
+
+        <!-- Inline Context Menu -->
+        <views:InlineContextMenu x:Name="InlineMenu"/>
+    </Panel>
 </UserControl>
