--- a/NiziKit.Editor/Views/ContentBrowserView.axaml
+++ b/NiziKit.Editor/Views/ContentBrowserView.axaml
@@ -7,48 +7,23 @@
              x:DataType="vm:ContentBrowserViewModel">
 
     <Panel>
-        <Grid ColumnDefinitions="220,*">
-            <!-- Left Sidebar: Folder Tree + Packs -->
+        <!-- Responsive sidebar with min/max constraints -->
+        <Grid ColumnDefinitions="Auto,*">
             <Border Grid.Column="0"
                     Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
                     BorderBrush="{DynamicResource CardStrokeColorDefaultBrush}"
                     BorderThickness="0,0,1,0"
-                    Padding="8">
-                <Grid RowDefinitions="Auto,*,Auto,Auto,*">
-                    <!-- Folders Header -->
-                    <TextBlock Grid.Row="0"
-                               Text="Folders"
-                               Theme="{StaticResource BodyStrongTextBlockStyle}"
-                               Margin="8,4,0,8"/>
-
-                    <!-- Folder Tree -->
-                    <TreeView Grid.Row="1"
-                              ItemsSource="{Binding FolderTree}"
-                              SelectedItem="{Binding SelectedFolder}">
-                        <TreeView.ItemTemplate>
-                            <TreeDataTemplate ItemsSource="{Binding Children}">
-                                <StackPanel Orientation="Horizontal" Spacing="8">
-                                    <PathIcon Data="{Binding IconData}"
-                                              Width="16" Height="16"
-                                              Foreground="{DynamicResource TextFillColorSecondaryBrush}"/>
-                                    <TextBlock Text="{Binding Name}"
-                                               VerticalAlignment="Center"/>
-                                </StackPanel>
-                            </TreeDataTemplate>
-                        </TreeView.ItemTemplate>
-                    </TreeView>
-
-                    <!-- Separator -->
-                    <Border Grid.Row="2"
-                            Height="1"
-                            Background="{DynamicResource DividerStrokeColorDefaultBrush}"
-                            Margin="0,8"/>
-
-                    <!-- Packs Header -->
-                    <Grid Grid.Row="3" ColumnDefinitions="*,Auto" Margin="8,4,0,8">
+                    Padding="6"
+                    MinWidth="150"
+                    MaxWidth="250"
+                    Width="180">
+                <Grid RowDefinitions="Auto,*">
+                    <Grid Grid.Row="0" ColumnDefinitions="*,Auto" Margin="6,4,0,8">
                         <TextBlock Text="Packs"
-                                   Theme="{StaticResource BodyStrongTextBlockStyle}"
-                                   VerticalAlignment="Center"/>
+                                   Classes="body-large"
+                                   FontWeight="SemiBold"
+                                   VerticalAlignment="Center"
+                                   TextTrimming="CharacterEllipsis"/>
                         <Button Grid.Column="1"
                                 Command="{Binding CreatePackCommand}"
                                 ToolTip.Tip="Create new pack"
@@ -57,8 +32,7 @@
                         </Button>
                     </Grid>
 
-                    <!-- Packs List -->
-                    <ListBox Grid.Row="4"
+                    <ListBox Grid.Row="1"
                              ItemsSource="{Binding PackTree}"
                              SelectedItem="{Binding SelectedFolder}">
                         <ListBox.ItemTemplate>
@@ -76,126 +50,69 @@
                 </Grid>
             </Border>
 
-            <!-- Right: Content Area with Tabs -->
-            <Grid Grid.Column="1" RowDefinitions="Auto,Auto,*,Auto">
-                <!-- Tab Bar -->
-                <Border Grid.Row="0"
-                        Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
-                        Padding="4,0">
-                    <ScrollViewer HorizontalScrollBarVisibility="Auto"
-                                  VerticalScrollBarVisibility="Disabled">
-                        <ItemsControl ItemsSource="{Binding Tabs}">
+            <Grid Grid.Column="1" RowDefinitions="Auto,*,Auto">
+                <Grid Grid.Row="0"
+                      ColumnDefinitions="*,Auto,Auto"
+                      Margin="8,8,8,4">
+                    <ScrollViewer Grid.Column="0"
+                                  HorizontalScrollBarVisibility="Auto"
+                                  VerticalScrollBarVisibility="Disabled"
+                                  VerticalAlignment="Center">
+                        <ItemsControl ItemsSource="{Binding SelectedTab.Breadcrumbs}"
+                                      VerticalAlignment="Center">
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
-                                    <StackPanel Orientation="Horizontal" Spacing="2"/>
+                                    <StackPanel Orientation="Horizontal"/>
                                 </ItemsPanelTemplate>
                             </ItemsControl.ItemsPanel>
                             <ItemsControl.ItemTemplate>
-                                <DataTemplate x:DataType="vm:ContentTab">
-                                    <Border x:Name="TabBorder"
-                                            Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-                                            CornerRadius="{DynamicResource ControlCornerRadius}"
-                                            Padding="12,8"
-                                            Margin="2"
-                                            Cursor="Hand"
-                                            PointerPressed="OnTabPointerPressed">
-                                        <StackPanel Orientation="Horizontal" Spacing="8">
-                                            <ui:SymbolIcon Symbol="Folder" FontSize="14"/>
-                                            <TextBlock Text="{Binding Title}"
-                                                       VerticalAlignment="Center"/>
-                                            <Button IsVisible="{Binding IsCloseable}"
-                                                    Command="{Binding $parent[ItemsControl].DataContext.CloseTabCommand}"
-                                                    CommandParameter="{Binding}"
-                                                    Padding="4"
-                                                    Margin="4,0,0,0">
-                                                <ui:SymbolIcon Symbol="Dismiss" FontSize="12"/>
-                                            </Button>
-                                        </StackPanel>
-                                    </Border>
+                                <DataTemplate x:DataType="vm:BreadcrumbItem">
+                                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                                        <Button Command="{Binding $parent[ItemsControl].DataContext.NavigateToCommand}"
+                                                CommandParameter="{Binding Path}"
+                                                Background="Transparent"
+                                                BorderThickness="0"
+                                                Padding="6,8"
+                                                Cursor="Hand"
+                                                VerticalAlignment="Center">
+                                            <TextBlock Text="{Binding Name}"
+                                                       Foreground="{DynamicResource TextFillColorPrimaryBrush}"/>
+                                        </Button>
+                                        <TextBlock Text="/"
+                                                   VerticalAlignment="Center"
+                                                   Margin="2,0"
+                                                   Foreground="{DynamicResource TextFillColorTertiaryBrush}"/>
+                                    </StackPanel>
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
                     </ScrollViewer>
-                </Border>
 
-                <!-- Toolbar: Breadcrumbs + Filter + Search -->
+                    <ComboBox Grid.Column="1"
+                              SelectedIndex="{Binding FilterIndex}"
+                              MinWidth="120"
+                              VerticalAlignment="Center"
+                              Margin="8,0">
+                        <ComboBoxItem Content="All"/>
+                        <ComboBoxItem Content="Models"/>
+                        <ComboBoxItem Content="Textures"/>
+                        <ComboBoxItem Content="Materials"/>
+                        <ComboBoxItem Content="Shaders"/>
+                        <ComboBoxItem Content="Scenes"/>
+                    </ComboBox>
+
+                    <TextBox Grid.Column="2"
+                             Text="{Binding SearchText}"
+                             Watermark="Search..."
+                             Width="180"
+                             VerticalAlignment="Center">
+                        <TextBox.InnerLeftContent>
+                            <ui:SymbolIcon Symbol="Find" FontSize="14" Margin="8,0,0,0"/>
+                        </TextBox.InnerLeftContent>
+                    </TextBox>
+                </Grid>
+
                 <Border Grid.Row="1"
-                        Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
-                        CornerRadius="{DynamicResource ControlCornerRadius}"
-                        Padding="12,8"
-                        Margin="8,8,8,4">
-                    <Grid ColumnDefinitions="Auto,*,Auto,Auto">
-                        <!-- Navigate Up -->
-                        <Button Grid.Column="0"
-                                Command="{Binding NavigateUpCommand}"
-                                IsEnabled="{Binding CanNavigateUp}"
-                                ToolTip.Tip="Go up"
-                                Padding="8">
-                            <ui:SymbolIcon Symbol="ChevronUp" FontSize="16"/>
-                        </Button>
-
-                        <!-- Breadcrumbs -->
-                        <ScrollViewer Grid.Column="1"
-                                      HorizontalScrollBarVisibility="Auto"
-                                      VerticalScrollBarVisibility="Disabled"
-                                      Margin="8,0">
-                            <ItemsControl ItemsSource="{Binding SelectedTab.Breadcrumbs}">
-                                <ItemsControl.ItemsPanel>
-                                    <ItemsPanelTemplate>
-                                        <StackPanel Orientation="Horizontal" Spacing="4"/>
-                                    </ItemsPanelTemplate>
-                                </ItemsControl.ItemsPanel>
-                                <ItemsControl.ItemTemplate>
-                                    <DataTemplate x:DataType="vm:BreadcrumbItem">
-                                        <StackPanel Orientation="Horizontal">
-                                            <Button Content="{Binding Name}"
-                                                    Command="{Binding $parent[ItemsControl].DataContext.NavigateToCommand}"
-                                                    CommandParameter="{Binding Path}"
-                                                    Padding="8,4"
-                                                    MaxWidth="150">
-                                                <Button.Styles>
-                                                    <Style Selector="Button > ContentPresenter > TextBlock">
-                                                        <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
-                                                    </Style>
-                                                </Button.Styles>
-                                            </Button>
-                                            <TextBlock Text="/"
-                                                       VerticalAlignment="Center"
-                                                       Margin="4,0"
-                                                       Foreground="{DynamicResource TextFillColorTertiaryBrush}"/>
-                                        </StackPanel>
-                                    </DataTemplate>
-                                </ItemsControl.ItemTemplate>
-                            </ItemsControl>
-                        </ScrollViewer>
-
-                        <!-- Filter -->
-                        <ComboBox Grid.Column="2"
-                                  SelectedIndex="{Binding FilterIndex}"
-                                  MinWidth="120"
-                                  Margin="0,0,8,0">
-                            <ComboBoxItem Content="All"/>
-                            <ComboBoxItem Content="Models"/>
-                            <ComboBoxItem Content="Textures"/>
-                            <ComboBoxItem Content="Materials"/>
-                            <ComboBoxItem Content="Shaders"/>
-                            <ComboBoxItem Content="Scenes"/>
-                        </ComboBox>
-
-                        <!-- Search -->
-                        <TextBox Grid.Column="3"
-                                 Text="{Binding SearchText}"
-                                 Watermark="Search..."
-                                 Width="180">
-                            <TextBox.InnerLeftContent>
-                                <ui:SymbolIcon Symbol="Find" FontSize="14" Margin="8,0,0,0"/>
-                            </TextBox.InnerLeftContent>
-                        </TextBox>
-                    </Grid>
-                </Border>
-
-                <!-- Content Grid -->
-                <Border Grid.Row="2"
                         x:Name="ContentGridBorder"
                         Margin="8,4,8,8"
                         Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
@@ -214,8 +131,8 @@
                         </ListBox.ItemsPanel>
                         <ListBox.ItemTemplate>
                             <DataTemplate x:DataType="vm:ContentItem">
-                                <Border Width="140"
-                                        Height="140"
+                                <Border Width="120"
+                                        Height="150"
                                         Margin="4"
                                         Padding="8"
                                         CornerRadius="{DynamicResource ControlCornerRadius}"
@@ -223,7 +140,6 @@
                                         ToolTip.Tip="{Binding TypeLabel}"
                                         PointerPressed="OnItemPointerPressed">
                                     <Grid RowDefinitions="*,Auto,Auto">
-                                        <!-- Icon -->
                                         <PathIcon Grid.Row="0"
                                                   Data="{Binding IconData}"
                                                   Width="40" Height="40"
@@ -231,16 +147,14 @@
                                                   HorizontalAlignment="Center"
                                                   VerticalAlignment="Center"/>
 
-                                        <!-- Name -->
                                         <TextBlock Grid.Row="1"
                                                    Text="{Binding Name}"
-                                                   TextTrimming="CharacterEllipsis"
+                                                   TextWrapping="Wrap"
                                                    TextAlignment="Center"
-                                                   MaxWidth="130"
+                                                   MaxHeight="40"
                                                    Margin="0,8,0,0"
                                                    ToolTip.Tip="{Binding Name}"/>
 
-                                        <!-- Model Info Badge -->
                                         <Border Grid.Row="2"
                                                 IsVisible="{Binding HasModelInfo}"
                                                 Background="{DynamicResource AccentFillColorDefaultBrush}"
@@ -262,8 +176,7 @@
                     </ListBox>
                 </Border>
 
-                <!-- Status Bar -->
-                <Border Grid.Row="3"
+                <Border Grid.Row="2"
                         Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
                         Padding="12,6"
                         IsVisible="{Binding StatusMessage, Converter={x:Static StringConverters.IsNotNullOrEmpty}}">
@@ -273,7 +186,6 @@
             </Grid>
         </Grid>
 
-        <!-- Inline Context Menu (overlay) -->
         <views:InlineContextMenu x:Name="InlineMenu"/>
     </Panel>
 
