--- a/NiziKit.Editor/Views/Editors/AssetEditorDialog.axaml
+++ b/NiziKit.Editor/Views/Editors/AssetEditorDialog.axaml
@@ -6,24 +6,20 @@
              x:Class="NiziKit.Editor.Views.Editors.AssetEditorDialog"
              x:DataType="vm:ContentBrowserViewModel">
 
-    <Border Background="{StaticResource EditorPanelBackground}"
-            BorderBrush="{StaticResource EditorPanelBorder}"
-            BorderThickness="1"
-            CornerRadius="8"
-            Width="750"
-            Height="650"
+    <Border Classes="dialog-container-large"
             HorizontalAlignment="Center"
-            VerticalAlignment="Center">
+            VerticalAlignment="Center"
+            Margin="40">
         <Grid RowDefinitions="Auto,Auto,*,Auto">
-            <!-- Title Bar -->
             <Border Grid.Row="0"
                     Background="{StaticResource EditorPanelSecondaryBackground}"
                     CornerRadius="8,8,0,0"
                     Padding="20,16">
                 <Grid ColumnDefinitions="*,Auto">
                     <TextBlock Text="{Binding AssetEditorTitle}"
-                               Theme="{StaticResource SubtitleTextBlockStyle}"
-                               VerticalAlignment="Center"/>
+                               Classes="subtitle"
+                               VerticalAlignment="Center"
+                               TextTrimming="CharacterEllipsis"/>
                     <Button Grid.Column="1"
                             Command="{Binding CloseAssetEditorCommand}"
                             ToolTip.Tip="Close"
@@ -33,17 +29,13 @@
                 </Grid>
             </Border>
 
-            <!-- Separator -->
             <Border Grid.Row="1" Height="1" Background="{DynamicResource DividerStrokeColorDefaultBrush}"/>
 
-            <!-- Content with Tab Control -->
             <TabControl Grid.Row="2" Margin="16" x:Name="EditorTabs">
-                <!-- Form Editor Tab -->
                 <TabItem Header="Form">
                     <editors:JsonFormEditor x:Name="FormEditor" Margin="8"/>
                 </TabItem>
 
-                <!-- JSON Editor Tab -->
                 <TabItem Header="JSON">
                     <ScrollViewer HorizontalScrollBarVisibility="Auto"
                                   VerticalScrollBarVisibility="Auto"
@@ -59,7 +51,6 @@
                 </TabItem>
             </TabControl>
 
-            <!-- Actions -->
             <Border Grid.Row="3"
                     Background="{StaticResource EditorPanelSecondaryBackground}"
                     CornerRadius="0,0,8,8"
